fix scrollbar in darkmode

--- a/ui/src/app/layout/components/sidebar/sidebar.component.scss
+++ b/ui/src/app/layout/components/sidebar/sidebar.component.scss
@@ -82,13 +82,15 @@ $topnav-background-color: #E2E2E3;
             background: darken($topnav-background-color, 5%);
         }
         .panel-collapse {
-            border-radious: 0;
+            border-radius: 0;
             border: none;
+
             .panel-body {
                 .list-group-item {
                     border-radius: 0;
                     background-color: $topnav-background-color;
                     border: 0 solid transparent;
+
                     a {
                         color: #999;
                     }
@@ -176,19 +178,6 @@ $topnav-background-color: #E2E2E3;
     }
 }
 
-::-webkit-scrollbar {
-    width: 8px;
-}
-
-::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 0px rgba(255, 255, 255, 1);
-    border-radius: 3px;
-}
-
-::-webkit-scrollbar-thumb {
-    border-radius: 3px;
-    -webkit-box-shadow: inset 0 0 3px rgba(255, 255, 255, 1);
-}
 
 .toggle-button {
     position: fixed;
